--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Ester Gomes <estergomesdesign@gmail.com> (https://estergomes.com/)",
+  "author": "eessgg",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.6",
-    "nodemon": "^1.19.4"
+    "mongoose": "^5.0.6"
+  },
+  "devDependencies": {
+    "expect": "^22.3.0",
+    "mocha": "^5.0.1",
+    "nodemon": "^1.15.0",
+    "supertest": "^3.0.0"
   }
 }
